# Video_Codec_SDK_12.1.14

./: .gitignore
Samples/: CMakeLists.txt
Samples/AppEncode/AppEncCuda/: AppEncCuda.cpp
relib/: CMakeLists.txt
relib/3rd_inc/: minimp3.h
relib/CMake/: FindNVCodecSDK.cmake
relib/HVidRecord/: CMakeLists.txt  NvEncoderOutputInVidMemCuda.cpp  NvEncoderOutputInVidMemCuda.h  hvidrec.cpp
relib/HVidRecord/inc/: hvidrec.h
relib/HVidRecord/test/: AppEncCuda.cpp
relib/hai_utils/: CMakeLists.txt  Defines.h  HiFile.cpp  HiHASH.cpp  HiObject.cpp  HiObject.h  HiUtils.cpp  HiUtils.h  RootPath.cpp  RootPath.h  StopWatch.cpp  StopWatch.h  base64.cpp  base64.h  log.h  uuid4.cpp  uuid4.h
relib/hai_utils/filesystem/: CMakeLists.txt
relib/hai_utils/fmt/: CMakeLists.txt
