cmake_minimum_required(VERSION 3.7)
project(NvCodec)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake;${CMAKE_MODULE_PATH}")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
find_package(NVCodecSDK REQUIRED)
include_directories(3rd_inc)
add_subdirectory(hai_utils)
add_subdirectory(HVidRecord)