CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(hai_utils)
add_subdirectory(fmt)
add_subdirectory(filesystem)
AUX_SOURCE_DIRECTORY(. DIR_LIB_SRCS)
AUX_SOURCE_DIRECTORY(oauth DIR_LIB_SRCS)
SET(TARGET hai_utils)
ADD_LIBRARY(${TARGET} STATIC ${DIR_LIB_SRCS})
if (ANDROID)
    TARGET_LINK_LIBRARIES(${TARGET} ghc_filesystem fmt log m android)
ELSE ()
    TARGET_LINK_LIBRARIES(${TARGET} ghc_filesystem fmt)
ENDIF ()
TARGET_INCLUDE_DIRECTORIES(${TARGET} INTERFACE .)
